add CreateExpense
- add new expense to database
